# ROV-Code-2024

./: .gitignore  README.md  autorun.sh  main.py  mav.parm  mav.tlog  mav.tlog.raw  pyproject.toml
Src/oak_d/: baremin.py
Src/pixhawk/: sensors.py
Src/server_socket/: server_socket.py
src/OAK_D_V2/: OakPipeline.py  Server.py
src/oakD/: ArucoMarkerV2.py  NetGearServer.py  OakPipeline.py  Server.py  __init__.py
src/pixhawk/: __init__.py  pixhawk.py  sensors.py
src/server_socket/: __init__.py  message.py  sensor_message.py  server_socket.py
