
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rov"
version = "1.0.0"

dependencies = [
    "wheel==0.37.1",
    "distro==1.9.0",
    "packaging==21.3",
    "pyparsing==3.1.4",
    "scikit-build==0.16.7",
    "setuptools==59.6.0",
    "typing-extensions==4.1.1"
    "lxml==5.3.0"
    "future==1.0.0"
    "pymavlink==2.4.41"
    "numpy==1.19.5"
    "opencv-python==4.10.0.84"
    "depthai==2.26.0.0"
    "pyserial==3.5",
]
